--- a/work/IIP_152.html
+++ b/work/IIP_152.html
@@ -153,7 +153,7 @@
                         </tr>
                         <tr>
                             <th class="txt-l must-type"><label for="srch06">이수인원</label></th>
-                            <td><input type="text" id="srch06"></td>
+                            <td><input type="text" id="srch06" readonly value="12"></td>
                             <th class="txt-l"><label for="srch05">정원</label></th>
                             <td><input type="text" id="srch05" class="readonly-txt" value="46" readonly /></td>
                         </tr>
@@ -196,7 +196,7 @@
                 </table>
             </div>
             <div class="top-info-group">
-                <h3 class="must-type">이수 현황</h3>
+                <h3>이수 현황</h3>
                 <small><em class="color-red">*</em> 예시 양식 확인 후 xlsx 파일 업로드가 필요합니다.</small>
             </div>
             <div class="com-view-table">
@@ -300,7 +300,7 @@
                             <th rowspan="3" class="txt-l must-type">결과 증빙자료<br>(출석부 등)</th>
                             <td>
                                 <div class="filebox flex-ac">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file01" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file01" class="file">
                                 </div>
