--- a/work/IIP_153.html
+++ b/work/IIP_153.html
@@ -144,7 +144,10 @@
                             <td><input type="text" id="srch02" class="readonly-txt" value="과정명" readonly /></td>
                             <th class="txt-l"><label for="srch03">교육기간</label></th>
                             <td class="flex-ac">
-                                <input type="text" id="srch03" class="readonly-txt" value="2024-12-12" readonly /><span class="dash">-</span><input type="text" class="readonly-txt" value="2024-12-12" readonly /></td>
+                                <input type="text" id="srch03" class="readonly-txt" value="2024-12-12" readonly />
+                                ~
+                                <input type="text" class="readonly-txt" value="2024-12-12" readonly />
+                            </td>
                         </tr>
                         <tr>
                             <th class="txt-l"><label for="srch04">온/오프<br>(교육방법)</label></th>
@@ -153,7 +156,7 @@
                             <td><input type="text" id="srch-aa" value="2" readonly></td>
                         </tr>
                         <tr>
-                            <th class="txt-l must-type"><label for="srch06">이수인원</label></th>
+                            <th class="txt-l"><label for="srch06">이수인원</label></th>
                             <td><input type="text" id="srch06" value="13" readonly ></td>
                             <th class="txt-l"><label for="srch05">정원</label></th>
                             <td><input type="text" id="srch05" class="readonly-txt" value="46" readonly /></td>
@@ -301,7 +304,7 @@
                             <th rowspan="3" class="txt-l must-type">결과 증빙자료<br>(출석부 등)</th>
                             <td>
                                 <div class="filebox flex-ac">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file01" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file01" class="file">
                                 </div>
