--- a/work/IIP_200.html
+++ b/work/IIP_200.html
@@ -286,7 +286,7 @@
                 <span class="title">교육과정 및 학습자 일괄 업로드</span>
                 <div class="info-area">
                     <div class="filebox">
-                        <input class="upload-name">
+                        <input class="upload-name" readonly>
                         <label for="file01" class="btns">파일첨부</label>
                         <button class="btns">양식다운로드</button>
                         <input type="file" id="file01" class="file">
