--- a/work/IIP_201.html
+++ b/work/IIP_201.html
@@ -190,7 +190,7 @@
                         <tr>
                             <th class="txt-l">추천 교육 노출</th>
                             <td class="chk-box flex-ac">
-                                <input type="checkbox" id="chk-1"> 
+                                <input type="checkbox" id="chk-1" disabled> 
                                 <label for="chk-1">(체크 시 추천 리스트에 안내)</label>
                             </td>
                             <th class="txt-l">추천수</th>
