--- a/work/IIP_401.html
+++ b/work/IIP_401.html
@@ -240,15 +240,24 @@
                                 <div class="row-gap">
                                     <div class="chk-box">
                                         <input type="checkbox" id="chk-12">
-                                        <label for="chk-12" class="ico organ01">학점은행제 평가인정기관</label>
+                                        <label for="chk-12">
+                                            학점은행제 평가인정기관
+                                            <span class="ico ico-cont-32 organ01"></span>
+                                        </label>
                                     </div>
                                     <div class="chk-box ico">
                                         <input type="checkbox" id="chk-13">
-                                        <label for="chk-13" class="ico organ02">평생학습계좌제 평가인정기관</label>
+                                        <label for="chk-13">
+                                            평생학습계좌제 평가인정기관
+                                            <span class="ico ico-cont-32 organ02"></span>
+                                        </label>
                                     </div>
                                     <div class="chk-box ico">
                                         <input type="checkbox" id="chk-14">
-                                        <label for="chk-14" class="ico organ03">성인문해교육 프로그램 운영기관</label>
+                                        <label for="chk-14">
+                                            성인문해교육 프로그램 운영기관
+                                            <span class="ico ico-cont-32 organ03"></span>
+                                        </label>
                                     </div>
                                 </div>
                             </td>
@@ -421,7 +430,7 @@
                             <td colspan="3" class="input-group">
                                 <div class="flex-ac">
                                     <div class="filebox flex-ac">
-                                        <input class="upload-name fixed-value" placeholder="텍스트 비활성화" disabled>
+                                        <input class="upload-name fixed-value" readonly>
                                         <label for="file01" class="btns bg-blue">파일첨부</label> 
                                         <input type="file" id="file01" class="file">
                                     </div>
@@ -464,7 +473,7 @@
                             <td class="plan type-wrap">이미지 2. jpg[114615 byte]
                                 <div class="flex-ac">
                                     <div class="filebox">
-                                        <input class="upload-name fixed-value" disabled>
+                                        <input class="upload-name fixed-value" readonly>
                                         <label for="file02" class="btns bg-blue">파일첨부</label> 
                                         <input type="file" id="file02" class="file">
                                     </div>
@@ -476,7 +485,7 @@
                             <th class="txt-l">운영계획 증빙자료<br>(교육청 신고내역, 기관정관 등)</th>
                             <td class="plan type-wrap">이미지 2. jpg[114615 byte]
                                 <div class="filebox flex-ac">
-                                    <input class="upload-name fixed-value" disabled>
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file03" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file03" class="file">
                                 </div>
