--- a/work/ILP_003.html
+++ b/work/ILP_003.html
@@ -348,7 +348,7 @@
                                 <button type="button" class="btns bg-blue">삭제</button>
                             </div>
                             <div class="filebox flex-ac">
-                                <input class="upload-name fixed-value">
+                                <input class="upload-name fixed-value" readonly>
                                 <label for="file01" class="btns bg-blue">파일첨부</label> 
                                 <input type="file" id="file01" class="file">
                             </div>
@@ -399,15 +399,24 @@
                             <div class="row-gap">
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk-12">
-                                    <label for="chk-12" class="ico organ01">학점은행제 평가인정기관</label>
+                                    <label for="chk-12">
+                                        학점은행제 평가인정기관
+                                        <span class="ico ico-cont-32 organ01"></span>
+                                    </label>
                                 </div>
                                 <div class="chk-box ico">
                                     <input type="checkbox" id="chk-13">
-                                    <label for="chk-13" class="ico organ02">평생학습계좌제 평가인정기관</label>
+                                    <label for="chk-13">
+                                        평생학습계좌제 평가인정기관
+                                        <span class="ico ico-cont-32 organ02"></span>
+                                    </label>
                                 </div>
                                 <div class="chk-box ico">
                                     <input type="checkbox" id="chk-14">
-                                    <label for="chk-14" class="ico organ03">성인문해교육 프로그램 운영기관</label>
+                                    <label for="chk-14">
+                                        성인문해교육 프로그램 운영기관
+                                        <span class="ico ico-cont-32 organ03"></span>
+                                    </label>
                                 </div>
                                 <ul class="bullet-list">
                                     <li>연계사업 선택 시 사용기관 안내에 해당 아이콘이 표기됩니다.</li>
@@ -491,7 +500,7 @@
                         <td colspan="3" class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-width">
+                                    <input class="upload-name fixed-width" readonly>
                                     <label for="file02" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file02" class="file">
                                 </div>
