--- a/work/ILP_005.html
+++ b/work/ILP_005.html
@@ -136,7 +136,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file01" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file01" class="file">
                                 </div>
@@ -144,7 +144,7 @@
                             </div>
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file02" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file02" class="file">
                                 </div>
@@ -157,7 +157,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file03" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file03" class="file">
                                 </div>
@@ -165,7 +165,7 @@
                             </div>
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file04" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file04" class="file">
                                 </div>
@@ -181,7 +181,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox flex-ac">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file05" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file05" class="file">
                                 </div>
@@ -190,7 +190,7 @@
                             </div>
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file06" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file06" class="file">
                                 </div>
@@ -203,7 +203,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file07" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file07" class="file">
                                 </div>
@@ -235,7 +235,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file08" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file08" class="file">
                                 </div>
@@ -248,7 +248,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file09" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file09" class="file">
                                 </div>
@@ -261,7 +261,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file10" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file10" class="file">
                                 </div>
