--- a/work/ILP_032.html
+++ b/work/ILP_032.html
@@ -126,7 +126,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file01" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file01" class="file">
                                 </div>
@@ -134,7 +134,7 @@
                             </div>
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file02" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file02" class="file">
                                 </div>
@@ -147,7 +147,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file03" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file03" class="file">
                                 </div>
@@ -155,7 +155,7 @@
                             </div>
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file04" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file04" class="file">
                                 </div>
@@ -171,7 +171,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file05" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file05" class="file">
                                 </div>
@@ -180,7 +180,7 @@
                             </div>
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file06" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file06" class="file">
                                 </div>
@@ -193,7 +193,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file07" class="btns bg-blue">파일첨부</label>
                                     <input type="file" id="file07" class="file">
                                 </div>
@@ -225,7 +225,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file08" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file08" class="file">
                                 </div>
@@ -238,7 +238,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file09" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file09" class="file">
                                 </div>
@@ -251,7 +251,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file10" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file10" class="file">
                                 </div>
