--- a/work/LAP_103.html
+++ b/work/LAP_103.html
@@ -192,6 +192,7 @@
 
         <div class="top-info-group">
             <h3>신청정보</h3>
+            <small><em class="color-red">*</em> 는 필수사항입니다.</small>
         </div>
         <div class="com-write-table">
             <table class="basic-info">
@@ -238,11 +239,15 @@
                         </td>
                     </tr>
                     <tr class="address">
-                        <th class="txt-l"><label for="e">주소</label></th>
-                        <td class="input-group space">
-                            <p class="flex-ac"><input type="text" class="fixed-value" readonly></p>
-                            <p class="flex-ac"><input type="text" class="fixed-value" readonly></p>
+                        <th rowspan="2" class="txt-l"><label for="e">주소</label></th>
+                        <td>
+                            충청남도 광진구 서부두2길20
                         </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            벚꽃아파트 104동 705호
+                        </td>                        
                     </tr>
                     <tr>
                         <th class="txt-l must-type"><label for="tel">휴대전화번호</label></th>
