--- a/work/LAP_113.html
+++ b/work/LAP_113.html
@@ -76,7 +76,7 @@
                         </div>
                     </div>         
                     <div class="new-window-btn-wrap">
-                        <button class="btns" onclick="window.close()">닫기</button>
+                        <button class="btns" onclick="window.close()">확인</button>
                     </div>
                 </div>
             </div>
