--- a/work/LAP_200.html
+++ b/work/LAP_200.html
@@ -159,7 +159,7 @@
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">이의제기신청</h2>
+            <h2 class="page-header-tit">이의제기 신청</h2>
         </div>
         <div class="contents contest">
             <div class="top-info-group">
@@ -198,6 +198,9 @@
                             <td>선정 이의제기</td>
                             <td>처리중</td>
                             <td>-</td>
+                        </tr>
+                        <tr>
+                            <td colspan="7">신청 내역이 없습니다.</td>
                         </tr>
                     </tbody>
                 </table>
