--- a/work/LAP_201.html
+++ b/work/LAP_201.html
@@ -164,7 +164,7 @@
         <div class="contents objection">
             <div class="com-write-table">
                 <ul class="bullet-list asterisk-list">
-                    <li><span class="ico blank">빈칸</span>에는 해당되는 곳에 √ 표를 합니다.</li>
+                    <li><span class="ico blank">빈칸</span>에는 해당되는 곳에 ✓ 표를 합니다.</li>
                     <li>색상이 어두운 란은 신청인이 작성하지 않습니다.</li>
                 </ul>
                 <table class="basic-info lg-only">
@@ -310,7 +310,7 @@
                             <th colspan="2" class="txt-l">첨부파일</th>
                             <td colspan="3">
                                 <div class="filebox flex-ac">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file01" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file01" class="file">
                                     <button type="button" class="btns bg-blue">초기화</button>
@@ -441,7 +441,7 @@
                             <th class="txt-l">첨부파일</th>
                             <td>
                                 <div class="filebox flex-ac">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file01" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file01" class="file">
                                 </div>
