--- a/work/LAP_400.html
+++ b/work/LAP_400.html
@@ -233,7 +233,7 @@
                         <p><strong class="list-label">연락처</strong><span>010-1212-1212</span></p>
                         <p><strong class="list-label">처리상태</strong><span>처리중</span></p>
                     </li>
-                    <li>
+                    <li class="ac-i">
                         <p>신청 내역이 없습니다.</p>
                     </li>
                 </ul>
