--- a/work/LAP_401.html
+++ b/work/LAP_401.html
@@ -161,7 +161,7 @@
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">수기공모신청 등록</h2>
+            <h2 class="page-header-tit">수기 공모 신청 </h2>
         </div>
         <div class="contents ">
             <div class="com-write-table">
@@ -183,7 +183,7 @@
                         <tr>
                             <th class="txt-l">주소</th>
                             <td>(04520) 서울특별시 중구 청계천로 14 7층</td>
-                            <th class="txt-l must-type"><label for="tel">휴대전화번호</label></th>
+                            <th class="txt-l"><label for="tel">휴대전화번호</label></th>
                             <td>
                                 <div class="input-num">
                                     <select id="tel">
@@ -206,7 +206,7 @@
                                     <select id="srch01" class="fixed-value">
                                         <option value="">전체</option>
                                     </select>
-                                    <input type="text" readonly>
+                                    <input type="text" class="disabled-style" readonly>
                                 </div>
                             </td>
                         </tr>
@@ -217,7 +217,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <th class="txt-l"><label for="srch03">글내용</label></th>
+                            <th class="txt-l"><label for="srch03">내용</label></th>
                             <td colspan="3">
                                 <div class="timer">
                                     <strong>남은시간 : 23:57</strong>
@@ -251,7 +251,7 @@
                             <td>(04520) 서울특별시 중구 청계천로 14 7층</td>
                         </tr>
                         <tr>
-                            <th class="txt-l must-type"><label for="tel">휴대전화번호</label></th>
+                            <th class="txt-l"><label for="tel">휴대전화번호</label></th>
                             <td>
                                 <div class="input-num">
                                     <select id="tel">
@@ -299,25 +299,6 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
-            <div class="paging ">
-                <span class="pg">
-                    <a href="#" class="prev">
-                        <span>이전</span>
-                    </a>
-                </span>
-                <span class="num">
-                    <a href="#" class="on">1</a>
-                    <a href="#">2</a>
-                    <a href="#">3</a>
-                    <a href="#">4</a>
-                    <a href="#">5</a>
-                </span>
-                <span class="pg">
-                    <a href="#" class="next">
-                        <span>다음</span>
-                    </a>
-                </span>
             </div>
         </div>
     </div>
@@ -375,138 +356,5 @@
             </div>
         </div>
     </footer>
-    <div class="layer-pop" data-pop="pop-1">
-        <div class="layer-content" style="--max-width: 1200px">
-            <div class="layer-scroll">
-                <span class="title">평생교육프로그램 운영과정</span>
-                <div class="info-area">
-                    <div class="top-info-group">
-                        <p class="top-info-group-data">총 <strong>19</strong>건</p>
-                        <select id="select-view">
-                            <option value="1">10건 보기</option>
-                            <option value="2">20건 보기</option>
-                            <option value="3">30건 보기</option>
-                        </select>
-                    </div>
-                    <div class="com-view-table table-scroll">
-                        <table class="mg-0" style="--minwidth: 1464px">
-                            <caption>평생교육프로그램 운영과정</caption>
-                            <colgroup>
-                                <col style="width: 4.10%"> 
-                                <col style="width: 13.66%"> 
-                                <col style="width: 6.83%"> 
-                                <col style="width: 11.34%"> 
-                                <col style="width: 6.83%">
-                                <col style="width: 5.46%"> 
-                                <col style="width: 10.11%"> 
-                                <col style="width: 6.83%"> 
-                                <col style="width: 6.83%"> 
-                                <col style="width: 8.54%"> 
-                                <col style="width: 8.54%"> 
-                                <col style="width: 10.93%">
-                            </colgroup>
-                            <thead>
-                                <tr>
-                                    <th class="wh-nowrap">순번</th>
-                                    <th>강좌명</th>
-                                    <th>대상자</th>
-                                    <th>강좌분류</th>
-                                    <th>교육방법</th>
-                                    <th>이용권<br>유형</th>
-                                    <th>총교육<br>일수/시간/회차</th>
-                                    <th>총교육<br>단위구분</th>
-                                    <th>(회당)<br>교육시간</th>
-                                    <th>수강료<br>(단위 : 원)</th>
-                                    <th>교재비<br>(단위 : 원)</th>
-                                    <th>등록일자</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td class="txt-l">실전 한국어</td>
-                                    <td>홍길동</td>
-                                    <td class="txt-l">학력보완교육</td>
-                                    <td>온라인</td>
-                                    <td>일반</td>
-                                    <td>10</td>
-                                    <td>일</td>
-                                    <td>1</td>
-                                    <td>10,000</td>
-                                    <td>0</td>
-                                    <td>YYYY.MM.DD</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td class="txt-l">칼퇴하는 O/A</td>
-                                    <td>홍길동</td>
-                                    <td class="txt-l">성인 문해교육</td>
-                                    <td>오프라인</td>
-                                    <td>일반</td>
-                                    <td>10.3</td>
-                                    <td>일</td>
-                                    <td>20</td>
-                                    <td>85,000</td>
-                                    <td>0</td>
-                                    <td>YYYY.MM.DD</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td class="txt-l">직업능력 향상교육</td>
-                                    <td>홍길동</td>
-                                    <td class="txt-l">직업능력 향상교육</td>
-                                    <td>온/오프<br>혼합</td>
-                                    <td>일반</td>
-                                    <td>20</td>
-                                    <td>일</td>
-                                    <td>1.2</td>
-                                    <td>15,000</td>
-                                    <td></td>
-                                    <td>YYYY.MM.DD</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td class="txt-l">실전 한국어</td>
-                                    <td>홍길동</td>
-                                    <td class="txt-l">직업능력 향상교육</td>
-                                    <td>온/오프<br>혼합</td>
-                                    <td>일반</td>
-                                    <td>100, 10.3</td>
-                                    <td>회차</td>
-                                    <td>1.2</td>
-                                    <td>85,000</td>
-                                    <td>0</td>
-                                    <td>YYYY.MM.DD</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="paging ">
-                        <span class="pg">
-                            <a href="#" class="prev">
-                                <span>이전</span>
-                            </a>
-                        </span>
-                        <span class="num">
-                            <a href="#" class="on">1</a>
-                            <a href="#">2</a>
-                            <a href="#">3</a>
-                            <a href="#">4</a>
-                            <a href="#">5</a>
-                        </span>
-                        <span class="pg">
-                            <a href="#" class="next">
-                                <span>다음</span>
-                            </a>
-                        </span>
-                    </div>
-                    <div class="layer-btn-wrap">
-                        <button class="btns" onclick="$('[data-pop=pop-1]').hide();">닫기</button>
-                    </div>
-                </div>
-                <button class="close-btn" onclick="$('[data-pop=pop-1]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
-            </div>
-        </div>
-    </div>
 </body>
 </html>
