--- a/work/LIP_001.html
+++ b/work/LIP_001.html
@@ -182,10 +182,10 @@
                             <th class="txt-l must-type"><label for="address">주소</label></th>
                             <td class="input-group space">
                                 <div class="flex-ac">
-                                    <input type="text" id="address" class="fixed-width" value="04520" readonly="readonly">
+                                    <input type="text" id="address" class="fixed-width" value="04520">
                                     <button type="button" class="btns bg-blue">주소검색</button>
                                 </div>
-                                <p class="flex-ac"><input type="text" class="fixed-value" value="서울특별시 중구 청계천로" readonly="readonly"></p>
+                                <p class="flex-ac"><input type="text" class="fixed-value" value="서울특별시 중구 청계천로"></p>
                                 <p class="flex-ac"><input type="text" class="fixed-value" value=""></p>
                                 <p class="bullet">주소는 주민등록등본 주소 변경 후 차년도에 반영됩니다.(선정자 연내 변동 불가)</p>
                             </td>
