--- a/work/LIP_100.html
+++ b/work/LIP_100.html
@@ -72,11 +72,7 @@
                         <div class="link-item">
                             <a href="LIP_001.html">개인정보수정</a>
                             <a href="LIP_100.html">평생교육이용권 신청내역</a>
-<<<<<<< HEAD
-                            <a href="#">평생교육이용권 이용내역</a>
-=======
                             <a class="hidden" href="#">평생교육이용권 이용내역</a>
->>>>>>> 413ebb8e139770f2cae6a891d1ae086c93218f12
                             <a href="LIP_300.html">교육이수정보</a>
                             <a class="hidden" href="#">이용자 이벤트</a>
                         </div>
@@ -199,7 +195,7 @@
                                     </select>
                                 </dd>                    
                             </dl>
-                            <button type="submit" class="btns">검색<span class="lg-only">하기</span></button>
+                            <button type="submit" class="btns">검색</button>
                         </div>
                     </fieldset>
                 </form> 
@@ -255,6 +251,12 @@
                             <td></td>
                             <td><button type="button" class="btns bg-blue w-auto">포기</button></td>
                         </tr>
+                        <tr>
+                            <td colspan="12">신청 내역이 없습니다.</td>
+                        </tr>
+                        <tr>
+                            <td colspan="12">검색 결과가 없습니다.</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -273,6 +275,12 @@
                         <p><strong class="list-label">자격검증</strong><span>검증대기</span></p>
                         <p><strong class="list-label">학습계획서</strong><span></span></p>
                         <p><strong class="list-label">선정포기</strong><span><button type="button" class="btns bg-blue w-auto">포기</button></span></p>
+                    </li>
+                    <li class="ac-i">
+                        <p>신청 내역이 없습니다.</p>
+                    </li>
+                    <li class="ac-i">
+                        <p>검색 결과가 없습니다.</p>
                     </li>
                 </ul>
             </div>
