--- a/work/LIP_300.html
+++ b/work/LIP_300.html
@@ -187,7 +187,7 @@
                                     </select>
                                 </dd>
                             </dl>
-                            <button type="submit" class="btns">검색<span class="lg-only">하기</span></button>
+                            <button type="submit" class="btns">검색</button>
                         </div>
                     </fieldset>
                 </form> 
@@ -199,12 +199,12 @@
                 <table>
                     <caption>교육 이수 정보 테이블</caption>
                     <colgroup>
-                        <col style="width: 100px;">
-                        <col style="width: 80px;">
-                        <col style="width: 150px;">
+                        <col style="width: 8%;">
+                        <col style="width: 7%;">
+                        <col style="width: 15%">
                         <col>
-                        <col style="width: 140px;">
-                        <col style="width: 120px;">
+                        <col style="width: 15%;">
+                        <col style="width: 10%;">
                         <col style="width: 100px;">
                         <col style="width: 120px;">
                         <col style="width: 120px;">
@@ -245,6 +245,12 @@
                             <td>전송대기</td>
                             <td>77770003</td>
                         </tr>
+                        <tr>
+                            <td colspan="9">검색 결과가 없습니다.</td>
+                        </tr>
+                        <tr>
+                            <td colspan="9">이수 정보가 없습니다.</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -267,6 +273,12 @@
                         <p><strong class="list-label">이수여부</strong><span>이수</span></p>
                         <p><strong class="list-label">계좌제연계</strong><span class="list-point">전송대기</span></p>
                         <p><strong class="list-label">승인번호</strong><span>72344234</span></p>
+                    </li>
+                    <li class="ac-i">
+                        <p>검색 결과가 없습니다.</p>
+                    </li>
+                    <li class="ac-i">
+                        <p>이수 정보가 없습니다.</p>
                     </li>
                 </ul>
             </div>
