--- a/work/LIP_400.html
+++ b/work/LIP_400.html
@@ -161,7 +161,7 @@
             <h2 class="page-header-tit">이용자 이벤트</h2>
         </div>
         <div class="com-write-table">
-            <table>
+            <table class="lg-only">
                 <caption>이용자 이벤트 정보 테이블</caption>
                 <colgroup>
                     <col style="width: 200px;">
@@ -174,11 +174,36 @@
                         <th class="txt-l">이벤트명</th>
                         <td>2024년 평생교육이용권 잔액 이벤트</td>
                         <th class="txt-l">이벤트 기간</th>
-                        <td>2024-10-17.10:00 ~ 2024-10-28.18:00</td>
+                        <td>2024-10-17 10:00 ~ 2024-10-28 18:00</td>
                     </tr>
                     <tr>
                         <th class="txt-l">당첨자 발표일</th>
                         <td>2024-11-01</td>
+                        <th class="txt-l">등록일</th>
+                        <td>2024-10-10</td>
+                    </tr>
+                </tbody>
+            </table>
+            <table class="sm-show-800">
+                <caption>이용자 이벤트 정보 테이블 모바일</caption>
+                <colgroup>
+                    <col>
+                    <col>
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th class="txt-l">이벤트명</th>
+                        <td>2024년 평생교육이용권 잔액 이벤트</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">이벤트 기간</th>
+                        <td>2024-10-17 10:00 ~ 2024-10-28 18:00</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">당첨자 발표일</th>
+                        <td>2024-11-01</td>
+                    </tr>
+                    <tr>
                         <th class="txt-l">등록일</th>
                         <td>2024-10-10</td>
                     </tr>
