--- a/work/LNP_001.html
+++ b/work/LNP_001.html
@@ -279,7 +279,7 @@
                         <p><strong class="list-label">작성일</strong><span>2024-10-02</span></p>
                     </a></li>
                     <!-- 검색 결과 데이터가 없을 경우 -->
-                    <li>
+                    <li class="ac-i">
                         <p>검색 결과가 없습니다.</p>
                     </li>
                 </ul>
