--- a/work/LNP_200.html
+++ b/work/LNP_200.html
@@ -152,7 +152,7 @@
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
                 <span class="arrow">게시판</span>
-                <span class="arrow">자주하는 질문</span>
+                <span class="arrow">온라인 상담</span>
             </div>
         </div>
     </div>
@@ -261,11 +261,6 @@
                                     </tr>
                                     <tr>
                                         <td>1</td>
-                                        <td class="txt-l"><a href="#" class="com-view-title">평생교육이용권 등록 시 “학습계좌 번호“ 입력이 나오는데, 평생학습계좌제가 무엇인가요?</a></td>
-                                        <td>2024-10-02</td>
-                                    </tr>
-                                    <tr>
-                                        <td>1</td>
                                         <td class="txt-l">
                                             <a href="#" class="com-view-title">평생교육이용권 카드 발급 방법은?</a>
                                         </td>
@@ -313,7 +308,7 @@
                                     <p><strong class="list-label">작성일</strong><span>2024-06-14</span></p>
                                 </a></li>
                                 <!-- 검색 결과 데이터가 없을 경우 -->
-                                <li>
+                                <li class="ac-i">
                                     <p>검색 결과가 없습니다.</p>
                                 </li>
                             </ul>
@@ -375,15 +370,17 @@
                             <table>
                                 <caption>온라인 상담 테이블</caption>
                                 <colgroup>
-                                    <col style="width: 102px;">
+                                    <col style="width: 100px;">
+                                    <col style="width: 160px;">
                                     <col>
-                                    <col style="width: 140px;">
-                                    <col style="width: 140px;">
-                                    <col style="width: 120px;">
+                                    <col style="width: 160px;">
+                                    <col style="width: 160px;">
+                                    <col style="width: 160px;">
                                 </colgroup>
                                 <thead>
                                     <tr>
                                         <th>번호</th>
+                                        <th>이용권 유형</th>
                                         <th>제목</th>
                                         <th>작성자</th>
                                         <th>작성일</th>
@@ -393,6 +390,7 @@
                                 <tbody>
                                     <tr>
                                         <td>2</td>
+                                        <td>디지털</td>
                                         <td class="txt-l">
                                             <a href="#" class="com-view-title">평생교육이용권 유형 문의</a>
                                         </td>
@@ -402,6 +400,7 @@
                                     </tr>
                                     <tr>
                                         <td>1</td>
+                                        <td>디지털</td>
                                         <td class="txt-l">
                                             <a href="#" class="com-view-title">평생교육이용권 유형 문의</a>
                                         </td>
@@ -409,9 +408,12 @@
                                         <td>2024-10-02</td>
                                         <td>완료</td>
                                     </tr>
+                                    <tr></tr>
+                                        <td colspan="6">상담 내역이 없습니다.</td>
+                                    </tr>
                                     <!-- 검색 결과 데이터가 없을 경우 -->
                                     <tr>
-                                        <td colspan="3">검색 결과가 없습니다.</td>
+                                        <td colspan="6">검색 결과가 없습니다.</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -439,8 +441,12 @@
                                     <p><strong class="list-label">작성일</strong><span>2024-10-02</span></p>
                                     <p><strong class="list-label">처리상태</strong><span>미완료</span></p>
                                 </a></li>
+                                <!-- 상담 내역 데이터가 없을 경우 -->
+                                <li class="ac-i">
+                                    <p>상담 내역이 없습니다.</p>
+                                </li>
                                 <!-- 검색 결과 데이터가 없을 경우 -->
-                                <li>
+                                <li class="ac-i">
                                     <p>검색 결과가 없습니다.</p>
                                 </li>
                             </ul>
