--- a/work/LNP_301.html
+++ b/work/LNP_301.html
@@ -208,7 +208,7 @@
                             <th class="txt-l">파일첨부</th>
                             <td>
                                 <div class="filebox flex-ac">
-                                    <input class="upload-name">
+                                    <input class="upload-name" readonly>
                                     <label for="file01" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file01" class="file">
                                 </div>
@@ -258,7 +258,7 @@
                             <th class="txt-l">파일첨부</th>
                             <td class="file-up-area">
                                 <div class="filebox flex-ac">
-                                    <input class="upload-name fixed-value">
+                                    <input class="upload-name fixed-value" readonly>
                                     <label for="file02" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file02" class="file">
                                 </div>
