--- a/work/LUP_001.html
+++ b/work/LUP_001.html
@@ -160,7 +160,7 @@
         <div class="page-header">
             <h2 class="page-header-tit">사용기관 안내</h2>
         </div>
-        <div class="contents usage-guide">
+        <div class="contents cs-center usage-guide">
             <div class="search-box">
                 <form>
                     <fieldset>
@@ -189,7 +189,7 @@
                                 </dd>
                             </dl>
                             <dl>
-                                <dt><label for="srch03">기관 구분</label></dt>
+                                <dt><label for="srch03">지역</label></dt>
                                 <dd>
                                     <div class="flex-ac mw-set">
                                         <select id="srch03">
@@ -207,7 +207,7 @@
                                     </div>
                                 </dd>                  
                             </dl>
-                            <dl>
+                            <dl class="search-chk">
                                 <dt>기관 구분</dt>                            
                                 <dd>
                                     <div class="flex-ac divide">
@@ -240,20 +240,29 @@
                                     <div class="flex-ac divide">
                                         <div class="chk-box">
                                             <input type="checkbox" id="chk-12">
-                                            <label for="chk-12" class="ico organ01">학점은행제</label>
+                                            <label for="chk-12">
+                                                학점은행제 평가인정기관
+                                                <span class="ico ico-cont-32 organ01"></span>
+                                            </label>
                                         </div>
                                         <div class="chk-box ico">
                                             <input type="checkbox" id="chk-13">
-                                            <label for="chk-13" class="ico organ02">평생학습계좌제</label>
+                                            <label for="chk-13">
+                                                평생학습계좌제 평가인정기관
+                                                <span class="ico ico-cont-32 organ02"></span>
+                                            </label>
                                         </div>
                                         <div class="chk-box ico">
                                             <input type="checkbox" id="chk-14">
-                                            <label for="chk-14" class="ico organ03">성인문해교육</label>
+                                            <label for="chk-14">
+                                                성인문해교육 프로그램 운영기관
+                                                <span class="ico ico-cont-32 organ03"></span>
+                                            </label>
                                         </div>
                                     </div>
                                 </dd>      
                             </dl>
-                            <dl>
+                            <dl class="search-chk">
                                 <dt><label for="srch03">운영 강좌 유형</label></dt>                            
                                 <dd>
                                     <div class="flex-ac divide">
@@ -391,53 +400,58 @@
             <div class="table-list sm-show-800">
                 <ul>
                     <li>
-                        <p><strong class="list-label">주소</strong><span>서울특별시 노원구</span></p>
-                    </li>
-                    <li>
+                        <p>
+                            <strong>(주)중앙자동차운전전문학원</strong>
+                            <span class="ico-cont-24 ico map"></span>
+                            <span class="new">NEW</span>
+                        </p>
+                        <p><strong class="list-label">주소</strong><span>인천광역시 서구</span></p>
                         <p><strong class="list-label">기관구분</strong><span>오프라인</span></p>
-                    </li>
-                    <li>
                         <p><strong class="list-label">홈페이지 주소</strong><span>www.test.co.kr</span></p>
                     </li>
                     <li>
-                        <p><strong class="list-label">기관 연계사업 유형</strong><span><img src="../images/biz2/ico/ico_organ02.svg" alt="기관 연계사업 유형"></span></p>
+                        <p>
+                            <strong>노원발달장애인평생교육센터</strong>
+                            <span class="ico-cont-24 ico map"></span>
+                        </p>
+                        <p><strong class="list-label">주소</strong><span>서울특별시 노원구</span></p>
+                        <p><strong class="list-label">기관구분</strong><span>오프라인</span></p>
+                        <p><strong class="list-label">홈페이지 주소</strong><span>www.test.co.kr</span></p>
+                        <p><strong class="list-label">기관 연계사업 유형</strong><span class="ico-cont-32 ico organ02"></span></p>
                     </li>
-                </ul>
-
-
-                <ul>
                     <li>
-                        <strong>(주)중앙자동차운전전문학원</strong> 
-                        <img src="../images/biz2/ico/ico_map.svg" alt="지도">
-                        <span class="new">NEW</span>
+                        <p>
+                            <strong>롯데마트문화센터안산점</strong>
+                            <span class="ico-cont-24 ico map"></span>
+                        </p>
+                        <p><strong class="list-label">주소</strong><span>서울특별시 노원구</span></p>
+                        <p><strong class="list-label">기관구분</strong><span>오프라인</span></p>
+                        <p><strong class="list-label">홈페이지 주소</strong><span>www.test.co.kr</span></p>
+                        <p><strong class="list-label">기관 연계사업 유형</strong><span class="ico-cont-32 ico organ02"></span></p>
                     </li>
-                    <li><strong>주소 :</strong> 인천광역시 서구</li>
-                    <li><strong>기관구분 :</strong> 오프라인</li>
-                    <li><strong>홈페이지 주소 :</strong> www.test.co.kr</li>
-                </ul>
-                <ul>
                     <li>
-                        <strong>노원발달장애인평생교육센터</strong> 
+                        <p>
+                            <strong>사당위드피아노학원</strong>
+                            <span class="ico-cont-24 ico map"></span>
+                        </p>
+                        <p><strong class="list-label">주소</strong><span>광주광역시 북구</span></p>
+                        <p><strong class="list-label">기관구분</strong><span>오프라인</span></p>
+                        <p><strong class="list-label">홈페이지 주소</strong><span>www.test.co.kr</span></p>
+                        <p><strong class="list-label">기관 연계사업 유형</strong><span class="ico-cont-32 ico organ02"></span></p>
                     </li>
-                    <li><strong>주소 :</strong> 서울특별시 노원구</li>
-                    <li><strong>기관구분 :</strong> 오프라인</li>
-                    <li><strong>홈페이지 주소 :</strong> www.test.co.kr</li>
                     <li>
-                        <strong>기관 연계사업 유형 :</strong> 
-                        <img src="../images/biz2/ico/ico_organ02.svg" alt="기관 연계사업 유형">
+                        <p>
+                            <strong>얼라이브필라테스불로점평생교육원</strong>
+                            <span class="ico-cont-24 ico map"></span>
+                        </p>
+                        <p><strong class="list-label">주소</strong><span>경기도 용인시</span></p>
+                        <p><strong class="list-label">기관구분</strong><span>오프라인</span></p>
+                        <p><strong class="list-label">홈페이지 주소</strong><span>www.test.co.kr</span></p>
+                        <p><strong class="list-label">기관 연계사업 유형</strong><span class="ico-cont-32 ico organ02"></span></p>
                     </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>(주)중앙자동차운전전문학원</strong> 
-                        <img src="../images/biz2/ico/ico_map.svg" alt="지도">
-                    </li>
-                    <li><strong>주소 :</strong> 인천광역시 서구</li>
-                    <li><strong>기관구분 :</strong> 오프라인</li>
-                    <li><strong>홈페이지 주소 :</strong> www.test.co.kr</li>
-                    <li>
-                        <strong>기관 연계사업 유형 :</strong> 
-                        <img src="../images/biz2/ico/ico_organ02.svg" alt="기관 연계사업 유형">
+                    <!-- 검색 결과 데이터가 없을 경우 -->
+                    <li class="ac-i">
+                        <p>검색 결과가 없습니다.</p>
                     </li>
                 </ul>
             </div>
