--- a/work/LUP_003.html
+++ b/work/LUP_003.html
@@ -164,7 +164,7 @@
         <div class="top-info-group">
             <h3>기관 기본 정보</h3>
         </div>
-        <div class="com-view-table">
+        <div class="com-write-table">
             <table class="detail-info">
                 <caption>기관 기본 정보 테이블</caption>
                 <colgroup>
@@ -173,39 +173,39 @@
                 </colgroup>
                 <tbody>
                     <tr>
-                        <th>기관명</th>
+                        <th class="txt-l">기관명</th>
                         <td>12실용음악학원</td>
                     </tr>
                     <tr>
-                        <th>기관 대표자명</th>
+                        <th class="txt-l">기관 대표자명</th>
                         <td>조미나</td>
                     </tr>
                     <tr>
-                        <th>기관 구분</th>
+                        <th class="txt-l">기관 구분</th>
                         <td>오프라인 교육기관</td>
                     </tr>
                     <tr>
-                        <th>운영 강좌 유형</th>
+                        <th class="txt-l">기관 운영강좌 유형</th>
                         <td>취미/교양</td>
                     </tr>
                     <tr>
-                        <th>기관 연계사업 유형</th>
+                        <th class="txt-l">기관 연계사업 유형</th>
                         <td>오프라인 교육기관</td>
                     </tr>
                     <tr>
-                        <th>주소</th>
+                        <th class="txt-l">주소</th>
                         <td>(21351) 인천광역시 부평구 충선로 191 뉴서울쇼핑센터 305호</td>
                     </tr>
                     <tr>
-                        <th>전화번호</th>
+                        <th class="txt-l">전화번호</th>
                         <td>010-8602-0428</td>
                     </tr>
                     <tr>
-                        <th>홈페이지 주소</th>
+                        <th class="txt-l">홈페이지 주소</th>
                         <td><a href="https://blog.naver.com/12musicschool" target="_blank" title="새창열림">https://blog.naver.com/12musicschool</a></td>
                     </tr>
                     <tr>
-                        <th>장애인 편의시설</th>
+                        <th class="txt-l">장애인 <br class="sm-show-800"> 편의시설</th>
                         <td>
                             <div>장애인 화장실</div>
                             <div>주출입구 단차없음</div>
