--- a/work/index.html
+++ b/work/index.html
@@ -939,6 +939,14 @@ table.file_lst .date { font-family: Tahoma; color: #999}
         <td class="ac"></td>
         <td></td>
     </tr>
+    <tr class="line l">
+        <th>평생교육이용권</th>
+        <td>이용권 지자체_개명 및 개번 신청</td>
+        <td>page</td>
+        <td><a href="./LIP_600.html">LIP_600.html</a></td>
+        <td class="ac"></td>
+        <td></td>
+    </tr>
     <tr class="line done l">
         <th>평생교육이용권</th>
         <td>이용권 지자체_마이페이지_개인정보 수정</td>
