--- a/work/IIP_501.html
+++ b/work/IIP_501.html
@@ -149,7 +149,7 @@
                             <th class="txt-l">파일첨부</th>
                             <td>
                                 <div class="filebox">
-                                    <input class="upload-name">
+                                    <input class="upload-name" readonly>
                                     <label for="file01" class="btns bg-blue">파일첨부</label> 
                                     <input type="file" id="file01" class="file">
                                 </div>
