--- a/work/IIP_800.html
+++ b/work/IIP_800.html
@@ -248,16 +248,25 @@
                             <td colspan="5" class="type-wrap">
                                 <div class="row-gap">
                                     <div class="chk-box">
-                                        <input type="checkbox" disabled  id="chk-12">
-                                        <label for="chk-12" class="ico organ01">학점은행제 평가인정기관</label>
+                                        <input type="checkbox" id="chk-12" disabled>
+                                        <label for="chk-12">
+                                            학점은행제 평가인정기관
+                                            <span class="ico ico-cont-32 organ01"></span>
+                                        </label>
                                     </div>
                                     <div class="chk-box ico">
-                                        <input type="checkbox" disabled  id="chk-13">
-                                        <label for="chk-13" class="ico organ02">평생학습계좌제 평가인정기관</label>
+                                        <input type="checkbox" id="chk-13" disabled>
+                                        <label for="chk-13">
+                                            평생학습계좌제 평가인정기관
+                                            <span class="ico ico-cont-32 organ02"></span>
+                                        </label>
                                     </div>
                                     <div class="chk-box ico">
-                                        <input type="checkbox" disabled  id="chk-14">
-                                        <label for="chk-14" class="ico organ03">성인문해교육 프로그램 운영기관</label>
+                                        <input type="checkbox" id="chk-14" disabled>
+                                        <label for="chk-14">
+                                            성인문해교육 프로그램 운영기관
+                                            <span class="ico ico-cont-32 organ03"></span>
+                                        </label>
                                     </div>
                                 </div>
                             </td>
