--- a/work/ILP_030.html
+++ b/work/ILP_030.html
@@ -256,7 +256,7 @@
                         <th class="txt-l must-type"><label for="chk07">주소</label></th>
                         <td class="input-group space">
                             <div class="flex-ac">
-                                <input type="text" id="chk07" class="fixed-width" value="04520" readonly />
+                                <input type="text" id="chk07" class="fixed-width" value="04520"/>
                                 <button type="button" class="btns bg-blue">주소검색</button>
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk-3">
@@ -264,7 +264,7 @@
                                 </div>
                                 <small class="txt-s">(오프라인 교육기관 체크시 선택 가능합니다.)</small>
                             </div>
-                            <p class="flex-ac"><input type="text" class="fixed-value" value="서울특별시 중구 청계천로 14 (무교동 77)" readonly /></p>
+                            <p class="flex-ac"><input type="text" class="fixed-value" value="서울특별시 중구 청계천로 14 (무교동 77)"/></p>
                             <p class="flex-ac"><input type="text" class="fixed-value"></p>
                         </td>
                     </tr>
@@ -337,7 +337,7 @@
                                 <button type="button" class="btns bg-blue">삭제</button>
                             </div>
                             <div class="filebox flex-ac">
-                                <input class="upload-name fixed-value">
+                                <input class="upload-name fixed-value" readonly>
                                 <label for="file01" class="btns bg-blue">파일첨부</label> 
                                 <input type="file" id="file01" class="file">
                             </div>
@@ -388,15 +388,24 @@
                             <div class="row-gap">
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk-12">
-                                    <label for="chk-12" class="ico organ01">학점은행제 평가인정기관</label>
+                                    <label for="chk-12">
+                                        학점은행제 평가인정기관
+                                        <span class="ico ico-cont-32 organ01"></span>
+                                    </label>
                                 </div>
                                 <div class="chk-box ico">
                                     <input type="checkbox" id="chk-13">
-                                    <label for="chk-13" class="ico organ02">평생학습계좌제 평가인정기관</label>
+                                    <label for="chk-13">
+                                        평생학습계좌제 평가인정기관
+                                        <span class="ico ico-cont-32 organ02"></span>
+                                    </label>
                                 </div>
                                 <div class="chk-box ico">
                                     <input type="checkbox" id="chk-14">
-                                    <label for="chk-14" class="ico organ03">성인문해교육 프로그램 운영기관</label>
+                                    <label for="chk-14">
+                                        성인문해교육 프로그램 운영기관
+                                        <span class="ico ico-cont-32 organ03"></span>
+                                    </label>
                                 </div>
                                 <ul class="bullet-list">
                                     <li>연계사업 선택 시 사용기관 안내에 해당 아이콘이 표기됩니다.</li>
@@ -473,7 +482,7 @@
                         <td colspan="3" class="input-group">
                             <div class="flex-ac">
                                 <div class="filebox">
-                                    <input class="upload-name fixed-width">
+                                    <input class="upload-name fixed-width" readonly>
                                     <label for="file02" class="btns bg-blue">파일첨부</label>
                                     <input type="file" id="file02" class="file">
                                 </div>
