--- a/work/LAP_102.html
+++ b/work/LAP_102.html
@@ -192,23 +192,23 @@
         <hr>       
         
         <div class="top-info-group">
-            <h3>신청가능한 이용권</h3>
+            <h3>신청가능한 평생교육이용권</h3>
         </div>
         <ul class="available-tickets">
             <li>
                 <strong>충청남도<br> 평생교육이용권 3차</strong>
                 <div class="disc">
-                    <p class="color-primary">주민등록 상 충청남도 홍성군 거주</p>
+                    <p class="color-darkblue">주민등록 상 충청남도 홍성군 거주</p>
                     <div class="price-wrap">
                         <span class="price">100,000원</span>
                         <span class="box">1914-07-15~2005-07-15 출생</span>
                     </div> 
                     <ul class="bullet-list">
-                        <li>자격요건 : 무관</li>
-                        <li>장애 여부 : 무관</li>
-                        <li>장학재단 중복 수혜 : 허용안함</li>
-                        <li>자격요건 : 무관</li>
-                        <li>신청기간 : 2024-08-01 (10시) ~ 2024-11-30 (18시)</li>
+                        <li><strong class="list-label">자격요건</strong><span>무관</span></li>
+                        <li><strong class="list-label">장애 여부</strong><span>무관</span></li>
+                        <li><strong class="list-label">장학재단 중복 수혜</strong><span>허용안함</span></li>
+                        <li><strong class="list-label">자격요건</strong><span>무관</span></li>
+                        <li class="apply-period"><strong class="list-label">신청기간</strong><span>2024-08-01 (10시) ~ 2024-11-30 (18시)</span></li>
                     </ul>
                 </div>
                 <button type="button" class="btns layer-btn bg-blue" onclick="modalPop()">선택</button>
@@ -216,17 +216,17 @@
             <li>
                 <strong>충청남도<br> 평생교육이용권 3차</strong>
                 <div class="disc">
-                    <p class="color-primary">주민등록 상 충청남도 홍성군 거주</p>
+                    <p class="color-darkblue">주민등록 상 충청남도 홍성군 거주</p>
                     <div class="price-wrap">
                         <span class="price">100,000원</span>
                         <span class="box">1914-07-15~2005-07-15 출생</span>
                     </div> 
                     <ul class="bullet-list">
-                        <li>자격요건 : 무관</li>
-                        <li>장애 여부 : 무관</li>
-                        <li>장학재단 중복 수혜 : 허용안함</li>
-                        <li>자격요건 : 무관</li>
-                        <li>신청기간 : 2024-08-01 (10시) ~ 2024-11-30 (18시)</li>
+                        <li><strong class="list-label">자격요건</strong><span>무관</span></li>
+                        <li><strong class="list-label">장애 여부</strong><span>무관</span></li>
+                        <li><strong class="list-label">장학재단 중복 수혜</strong><span>허용안함</span></li>
+                        <li><strong class="list-label">자격요건</strong><span>무관</span></li>
+                        <li class="apply-period"><strong class="list-label">신청기간</strong><span>2024-08-01 (10시) ~ 2024-11-30 (18시)</span></li>
                     </ul>
                 </div>
                 <button type="button" class="btns bg-blue">선택</button>
@@ -290,87 +290,28 @@
             </div>
         </div>
     </footer>
-    <div class="layer-pop" data-pop="is-auth">
-        <div class="layer-content">
-            <div class="layer-scroll">
-                <span class="title">자격검증</span>
-                <div class="info-area auth-res">
-                    <div class="border-box-20">
-                        <div class="data-list">
-                            <dl>
-                                <dt>성명</dt>
-                                <dd>홍길동</dd>
-                            </dl>
-                            <dl>
-                                <dt>주민등록번호</dt>
-                                <dd>991218-1******</dd>
-                            </dl>
-                            <dl>
-                                <dt>
-                                    평생교육 <br>
-                                    이용권 유형 
-                                </dt>
-                                <dd class="data-radio-list">
-                                    <div class="flex-ac">
-                                        <div class="data-radio">
-                                            <input type="radio" name="r" id="reg" checked>
-                                            <label for="reg">지역특화</label>
-                                        </div>
-                                        <div class="data-radio">
-                                            <input type="radio" name="r" id="dig">
-                                            <label for="dig">디지털</label>
-                                        </div>
-                                        <div class="data-radio">
-                                            <input type="radio" name="r" id="old">
-                                            <label for="old">노인</label>
-                                        </div>
-                                    </div>
-                                </dd>
-                            </dl>
-                        </div>
-                        <div class="border-box-20">
-                            <p class="auth-res-txt">홍길동님은 선택하신 충청남도 평생교육이용권(디지털형)을 신청하실 수 있습니다.</p>
-                        </div>
-                        <div class="auth-res-agree">
-                            <p class="auth-res-detail">
-                                위 신청 자격을 확인하였으며, <br class="sm-show-800">이에 동의하고 신청을 진행합니다. <br>
-                                지금부터 작성하는 서류는 해당 지자체장 및 국가평생교육진흥원장에게 귀속됩니다.
-                            </p>
-                            <div class="radio-wrap">
-                                <div class="radio-box">
-                                    <input type="radio" name="auth" id="yes">
-                                    <label for="yes">예</label>
-                                </div>
-                                <div class="radio-box">
-                                    <input type="radio" name="auth" id="no">
-                                    <label for="no">아니오</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>                    
-                    <div class="new-window-btn-wrap">
-                        <button class="btns" onclick="window.close()">닫기</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <script>
         /* 20241230 이민혁 임시 새창 팝업 제어 스크립트 */
         function modalPop(){
-            popup = window.open('LAP_113.html', '기관 조회 팝업', 'status=no, toolbar=no, menubar=no, resizable=1,')   
+            popup = window.open('LAP_113.html', '기관 조회 팝업', 'status=no, toolbar=no, menubar=no, resizable=1,')
+            
             popup.onload = function(){
+
                 localStorage.setItem('newWindow', 'true')
+
                 // 팝업 높이 setting
                 let contentHeight = popup.document.querySelector('.new-window-content').scrollHeight;
                 let browserUiHeight = popup.outerHeight - popup.innerHeight;
                 let resizeHeight = contentHeight + browserUiHeight;
+
                 // 팝업 넓이 세팅
                 let contentWidth = popup.document.querySelector('.new-window-content').scrollWidth;
                 let browserUiWidth = popup.outerWidth - popup.innerWidth;
                 let resizeWidth = contentWidth + browserUiWidth;
+
                 // 브라우저 ui 높이 넓이를 뺀 값으로 리사이징
                 popup.resizeTo(resizeWidth ,resizeHeight)
+
                 // 브라우저 스크린 기준으로 중앙 정렬
                 let left = Math.ceil((window.screen.width - resizeWidth)/2);
                 let top = Math.ceil((window.screen.height - resizeHeight)/2);
