--- a/work/LNP_202.html
+++ b/work/LNP_202.html
@@ -153,13 +153,12 @@
             <div class="location-box">
                 <span class="arrow">게시판</span>
                 <span class="arrow">자주하는 질문</span>
-                <span class="arrow">자주하는 질문 상세</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">자주하는 질문 상세</h2>
+            <h2 class="page-header-tit">자주하는 질문</h2>
         </div>
         <div class="contents qna">
             <div class="top-info-group">
